--- a/staging/1/index.html
+++ b/staging/1/index.html
@@ -34,7 +34,7 @@
         <div class="col-xs-12">
           <div class="logo">
             <img src="img/logo.png" alt="UPVOC -">
-            <a href="#news" class="slogan">Новости на английском с переводом в один клик</a>
+            <a href="/#news" class="slogan">Новости на английском с переводом в один клик</a>
           </div>
           <div class="language">
             Язык:
@@ -73,7 +73,7 @@ TechCrunch на английском</li>
 запоминать переведенные
 слова</li>
           </ul>
-          <a href="#news" class="button">Читать новости на английском</a>
+          <a href="/#news" class="button">Читать новости на английском</a>
         </div>
         <div class="col-xs-12 col-md-4">
           <div class="auth">
@@ -109,15 +109,15 @@ TechCrunch на английском</li>
                   </a>
                 </li>
                 <li class="social__item">
-                  <a href="/auth/tw" class="button--social social--tw">
+                  <a href="/auth/twitter" class="button--social social--tw">
                     <i class="social-icon social-tw"></i>
-                    <span class="social__desktop ">Войти через Facebook</span>
+                    <span class="social__desktop ">Войти через Twitter</span>
                   </a>
                 </li>
                 <li class="social__item">
-                  <a href="/auth/twitter" class="button--social social--vk">
+                  <a href="/auth/vk" class="button--social social--vk">
                     <i class="social-icon social-vk"></i>
-                    <span class="social__desktop">Войти через Facebook</span>
+                    <span class="social__desktop">Войти через VK</span>
                   </a>
                 </li>
               </ul>
