--- a/staging/1/index.html
+++ b/staging/1/index.html
@@ -88,15 +88,15 @@ TechCrunch на английском</li>
             <div class="tab-content">
               <div role="tabpanel" class="tab-pane" id="login">
                 <div class="form">
-                  <input type="text" name="name" value="" placeholder="E-main">
-                  <input type="password" name="name" value="" placeholder="Пароль">
+                  <input type="text" name="username" value="" placeholder="E-mail">
+                  <input type="password" name="password" value="" placeholder="Пароль">
                 </div>
                 <button type="button" name="button" class="button button--orange button--block">Вход</button>
               </div>
               <div role="tabpanel" class="tab-pane active" id="register">
                 <div class="form">
-                  <input type="text" name="name" value="" placeholder="E-main">
-                  <input type="password" name="name" value="" placeholder="Пароль">
+                  <input type="text" name="username" value="" placeholder="E-mail">
+                  <input type="password" name="password" value="" placeholder="Пароль">
                 </div>
                 <button type="button" name="button" class="button button--orange button--block">Регистрация</button>
               </div>
