staging login form

--- a/staging/1/index.html
+++ b/staging/1/index.html
@@ -87,18 +87,22 @@ TechCrunch на английском</li>
             </ul>
             <div class="tab-content">
               <div role="tabpanel" class="tab-pane" id="login">
-                <div class="form">
-                  <input type="text" name="username" value="" placeholder="E-mail">
-                  <input type="password" name="password" value="" placeholder="Пароль">
-                </div>
-                <button type="button" name="button" class="button button--orange button--block">Вход</button>
+                <form>
+                  <div class="form">
+                    <input class="login-input" type="text" name="username" value="" placeholder="E-mail">
+                    <input class="password-input" type="password" name="password" value="" placeholder="Пароль">
+                  </div>
+                  <button type="button" name="button" class="button button--orange button--block">Вход</button>
+                </form>
               </div>
               <div role="tabpanel" class="tab-pane active" id="register">
-                <div class="form">
-                  <input type="text" name="username" value="" placeholder="E-mail">
-                  <input type="password" name="password" value="" placeholder="Пароль">
-                </div>
-                <button type="button" name="button" class="button button--orange button--block">Регистрация</button>
+                <form>
+                  <div class="form">
+                    <input class="login-input" type="text" name="username" value="" placeholder="E-mail">
+                    <input class="password-input" type="password" name="password" value="" placeholder="Пароль">
+                  </div>
+                  <button type="button" name="button" class="button button--orange button--block">Регистрация</button>
+                </form>
               </div>
               <h5 class="auth__title">Войти через социальные сети</h5>
               <ul class="social">
@@ -128,6 +132,7 @@ TechCrunch на английском</li>
     </div>
   </section>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+  <script src="js/form.js"></script>
   <script src="js/tab.min.js"></script>
 </body>
 </html>
