--- a/staging/1/index.html
+++ b/staging/1/index.html
@@ -92,7 +92,7 @@ TechCrunch на английском</li>
                     <input class="login-input" type="text" name="username" value="" placeholder="E-mail">
                     <input class="password-input" type="password" name="password" value="" placeholder="Пароль">
                   </div>
-                  <button type="button" name="button" class="button button--orange button--block">Вход</button>
+                  <button type="submit" name="button" class="button button--orange button--block">Вход</button>
                 </form>
               </div>
               <div role="tabpanel" class="tab-pane active" id="register">
@@ -101,7 +101,7 @@ TechCrunch на английском</li>
                     <input class="login-input" type="text" name="username" value="" placeholder="E-mail">
                     <input class="password-input" type="password" name="password" value="" placeholder="Пароль">
                   </div>
-                  <button type="button" name="button" class="button button--orange button--block">Регистрация</button>
+                  <button type="submit" name="button" class="button button--orange button--block">Регистрация</button>
                 </form>
               </div>
               <h5 class="auth__title">Войти через социальные сети</h5>
