--- a/staging/1/index.html
+++ b/staging/1/index.html
@@ -34,7 +34,7 @@
         <div class="col-xs-12">
           <div class="logo">
             <img src="img/logo.png" alt="UPVOC -">
-            <a href="/#news" class="slogan">Новости на английском с переводом в один клик</a>
+            <a href="/" class="slogan">Новости на английском с переводом в один клик</a>
           </div>
           <div class="language">
             Язык:
@@ -73,7 +73,7 @@ TechCrunch на английском</li>
 запоминать переведенные
 слова</li>
           </ul>
-          <a href="/#news" class="button">Читать новости на английском</a>
+          <a href="/" class="button">Читать новости на английском</a>
         </div>
         <div class="col-xs-12 col-md-4">
           <div class="auth">
