--- a/staging/1/index.html
+++ b/staging/1/index.html
@@ -34,7 +34,7 @@
         <div class="col-xs-12">
           <div class="logo">
             <img src="img/logo.png" alt="UPVOC -">
-            <a href="/" class="slogan">Новости на английском с переводом в один клик</a>
+            <a href="/" class="slogan blue-button">Новости на английском с переводом в один клик</a>
           </div>
           <div class="language">
             Язык:
@@ -73,7 +73,7 @@ TechCrunch на английском</li>
 запоминать переведенные
 слова</li>
           </ul>
-          <a href="/" class="button">Читать новости на английском</a>
+          <a href="/" class="button green-button">Читать новости на английском</a>
         </div>
         <div class="col-xs-12 col-md-4">
           <div class="auth">
@@ -134,5 +134,20 @@ TechCrunch на английском</li>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   <script src="js/form.js"></script>
   <script src="js/tab.min.js"></script>
+  <!-- Yandex.Metrika counter -->
+  <script src="https://mc.yandex.ru/metrika/watch.js" type="text/javascript"></script>
+  <script type="text/javascript">
+    try {
+      var yaCounter36871255 = new Ya.Metrika({
+        id:36871255,
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true
+      });
+      window.yaCounter = yaCounter36871255;
+    } catch(e) { }
+  </script>
+  <noscript><div><img src="https://mc.yandex.ru/watch/36871255" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+  <!-- /Yandex.Metrika counter -->
 </body>
 </html>
