--- a/staging/1/index.html
+++ b/staging/1/index.html
@@ -132,8 +132,8 @@ TechCrunch на английском</li>
     </div>
   </section>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-  <script src="js/form.js"></script>
-  <script src="js/tab.min.js"></script>
+  <script src="scripts/form.js"></script>
+  <script src="scripts/tab.min.js"></script>
   <!-- Yandex.Metrika counter -->
   <script src="https://mc.yandex.ru/metrika/watch.js" type="text/javascript"></script>
   <script type="text/javascript">
