--- a/staging/1/index.html
+++ b/staging/1/index.html
@@ -33,7 +33,7 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="logo">
-            <img src="img/logo.png" alt="UPVOC -">
+            <img src="images/logo.png" alt="UPVOC -">
             <a href="/news" class="slogan blue-button">Новости на английском с переводом в один клик</a>
           </div>
           <div class="language">
