--- a/staging/1/index.html
+++ b/staging/1/index.html
@@ -79,7 +79,7 @@ TechCrunch на английском</li>
           <div class="auth">
             <ul class="auth__tab-menu" role="tablist">
               <li>
-                <a href="#login" aria-controls="login" role="tab" data-toggle="tab">Вход</a>
+                <a href="/news">Вход</a>
               </li>
               <li class="active">
                 <a href="#register" aria-controls="register" role="tab" data-toggle="tab">Регистрация</a>
