--- a/staging/1/index.html
+++ b/staging/1/index.html
@@ -6,6 +6,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Document</title>
   <link rel="stylesheet" href="style/style.min.css">
+  <script>
+    if(window.localStorage.getItem('visited', true)) {
+      window.location = '/news';
+    } else {
+      window.localStorage.setItem('visited', true)
+    }
+  </script>
 </head>
 <body>
   <svg style="position: absolute; width: 0; height: 0;" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
